# stim-hs

./: .gitignore  .gitmodules  LICENSE  README.md  cabal.project
c-stim/: Makefile
c-stim/include/: stimhs.h
c-stim/src/: stimhs_circuit.cpp  stimhs_dem.cpp  stimhs_gen.cpp  stimhs_sampler.cpp  stimhs_simulator.cpp  stimhs_util.cpp
stim-hs/: Setup.hs  stim.cabal
stim-hs/app/: DEMDemo.hs  Main.hs
stim-hs/src/: Stim.hs
stim-hs/src/Stim/: Circuit.hs  Sampler.hs  Tableau.hs  TableauSimulator.hs  Types.hs
stim-hs/src/Stim/Circuit/: Gen.hs
stim-hs/src/Stim/Internal/: CString.hs  Error.hs  FFI.hs  Memory.hs  Types.hs
stim-hs/test/: Main.hs
